--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pets.net</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
-<body class= body>
+<body>
     <header class= header>
         <a href="index.html">
             <img src="img/Logo.png" alt="" height="100" width="100">
@@ -18,22 +18,20 @@
             <button type="submit" class="search-submit">
             </button>
         </form>
+        <nav>
+            <section class="menu" id="example1">
+                <a class="botones" href="#Mascotas para adoptar">Mascotas para adoptar</a>
+                <a href="#Mascotas extraviadas">Mascotas extraviadas</a>
+                <a href="#Veterinarias en la zona">Veterinarias en la zona</a>
+                <a href="#Refugios en la zona">Refugios en la zona</a>
+            </section>
+        </nav>
     </header>
    
     <main>
-        <nav>
-            <section class="xd" id="example1">
-                <h2>Índice</h2>
-                <ul>
-                    <li><a href="#Mascotas para adoptar">Mascotas para adoptar</a></li>
-                    <li><a href="#Mascotas extraviadas">Mascotas extraviadas</a></li>
-                    <li><a href="#Veterinarias en la zona">Veterinarias en la zona</a></li>
-                    <li><a href="#Refugios en la zona">Refugios en la zona</a></li>
-                </ul>  
-            </section>
-        </nav>
+        
         <div>
-            <section class="xd" id="example1">
+            <section class="recuadro" id="example1">
                 <h2>Sobre nuestro proyecto</h2>
                 <p>La Problemática del proyecto es la cantidad de animales/mascotas que se
                     encuentran viviendo en la calle o que están perdidos.</p>
