--- a/pets.net/VetHuertaGrande.html
+++ b/pets.net/VetHuertaGrande.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -23,11 +23,11 @@
     <main>
         <div>
             <section class="recuadro" id="example1">
-                <h1>Refugios en Villa Giardino</h1>
-                <h3>Cuchas Amigables</h3>
-                    <p>Tel: 0341 615-5344</p>
-                    <p>gmail: jorgeharraca@hotmail.com</p>
-                    <p>dirección: Atalaya 941 - Barrio Vertientes de Thea, Villa Giardino, Argentina</p>
+                <h1>Veterinarias en Huerta Grande</h1>
+                <h3>No hay veterinarias en Huerta Grande, pero puedes comunicarte con un veterinario online en:</h3>
+                <a href="https://www.justanswer.es/sip/ayuda-veterinaria-online?r=ppc|ga|10|ES%20-%20Pets%20-%20Expansion%20-%20Search%20-%20Google%20-%20Broad|Veterinaria%20-%20Veterinario%20-%20Broad&JPKW=veterinario%20cordoba&JPDC=S&JPST=&JPAD=443374258467&JPMT=b&JPNW=s&JPAF=txt&JPCD=20180725&JPRC=1&JCLT=Veterinarios%20Online&JPOP=PetsExpansion&mkwid=s_dc&pcrid=443374258467&pkw=veterinario%20cordoba&pmt=b&plc=&cmpid=10339377331&agid=106602648201&fiid=&tgtid=kwd-303508545961&ntw=s&dvc=c&r=ppc|ga|9||&JPKW=veterinario%20cordoba&JPDC=S&JPST=&JPAD=443374258467&JPMT=b&JPNW=s&JPAF=txt&JPRC=1&JPCD=&JPOP=&gad_source=5&gclid=EAIaIQobChMIj7O4hqybiAMVJ1lIAB2nFyN4EAAYASAAEgJIAPD_BwE" target="_blank">
+                    <h3>Veterinarios Online</h3>
+                </a>
             </section>
         </div>
     </main>
