--- a/pets.net/index.html
+++ b/pets.net/index.html
@@ -9,15 +9,16 @@
 </head>
 <body>
     <header class= header>
-        <a href="index.html">
-            <img src="img/Logo.png" alt="" height="100" width="100">
-        </a>
-        <form id="rech" action="/recherche" name="searchform" class="navbar-form navbar-right" role="search" method="GET">
-            <input placeholder="Buscar..." id="search-input story" class="searchbar-input" name="q" size="17" type="text" autocomplete="off" value="">
-            <div id="searchsuggestions" style="position: absolute; top: 0px; left: 0px; display: none;"></div>
-            <button type="submit" class="search-submit">
-            </button>
-        </form>
+        <div class="header-container">
+            <a href="index.html">
+                <img src="img/Logo.png" alt="" height="100" width="100">
+            </a>
+            <form id="rech" action="/recherche" name="searchform" class="navbar-form" role="search" method="GET">
+                <input placeholder="Buscar..." id="search-input story" class="searchbar-input" name="q" size="17" type="text" autocomplete="off" value="">
+                <div id="searchsuggestions" style="position: absolute; top: 0px; left: 0px; display: none;"></div>
+                <button type="submit" class="search-submit">
+                </button>
+            </form>
         <nav>
             <section class="menu" id="example1">
                 <a class="botones" href="#Mascotas para adoptar">Mascotas para adoptar</a>
@@ -93,12 +94,14 @@
                     <div class="box">
                         <a href="VetVillaGiardino.html">Villa Giardino</a>
                     </div>
-                    <div class="box">Huerta Grande</div>
                     <div class="box">
-                        <a href="RefLaFalda.html">La Falda</a>
+                        <a href="VetHuertaGrande.html">Huerta Grande</a>
                     </div>
                     <div class="box">
-                        <a href="RefValleHermoso.html">Valle Hermoso</a>
+                        <a href="VetLaFalda.html">La Falda</a>
+                    </div>
+                    <div class="box">
+                        <a href="VetValleHermoso.html">Valle Hermoso</a>
                     </div>
                 </div>
             </section>
