--- a/pets.net/VetVillaGiardino.html
+++ b/pets.net/VetVillaGiardino.html
@@ -9,15 +9,16 @@
 </head>
 <body class= body>
     <header class= header>
-        <a href="index.html">
-            <img src="img/Logo.png" alt="" height="100" width="100">
-        </a>
-        <form id="rech" action="/recherche" name="searchform" class="navbar-form navbar-right" role="search" method="GET">
-            <input placeholder="Buscar..." id="search-input story" class="searchbar-input" name="q" size="17" type="text" autocomplete="off" value="">
-            <div id="searchsuggestions" style="position: absolute; top: 0px; left: 0px; display: none;"></div>
-            <button type="submit" class="search-submit">
-            </button>
-        </form>
+        <div class="header-container">
+            <a href="index.html">
+                <img src="img/Logo.png" alt="" height="100" width="100">
+            </a>
+            <form id="rech" action="/recherche" name="searchform" class="navbar-form" role="search" method="GET">
+                <input placeholder="Buscar..." id="search-input story" class="searchbar-input" name="q" size="17" type="text" autocomplete="off" value="">
+                <div id="searchsuggestions" style="position: absolute; top: 0px; left: 0px; display: none;"></div>
+                <button type="submit" class="search-submit">
+                </button>
+            </form>
     </header>
     <main>
         <div>
