--- a/pets.net/index.html
+++ b/pets.net/index.html
@@ -114,7 +114,9 @@
                     <div class="box">
                         <a href="RefVillaGiardino.html">Villa Giardino</a>
                     </div>
-                    <div class="box">Huerta Grande</div>
+                    <div class="box">
+                        <a href="RefHuertaGrande.html">Huerta Grande</a>
+                    </div>
                     <div class="box">
                         <a href="RefLaFalda.html">La Falda</a>
                     </div>
