--- a/pets.net/perro1.html
+++ b/pets.net/perro1.html
@@ -28,6 +28,11 @@
                 <h3>Sobre Pepe:</h3>
                 <p>Macho. Castrado, vacunado y desparasitado.Tiene 2 años. Es muy cariñoso y jugueton con niños</p>
                 <h4>Tel: 34589009838493</h4>
+                <div class="container">
+                    <div class="box">
+                        <a href="index.html">Atrás</a>
+                    </div>
+                </div>
             </section>
         </div>
     </main>
