--- a/pets.net/perro2.html
+++ b/pets.net/perro2.html
@@ -28,6 +28,11 @@
                 <h3>Sobre Jorgito:</h3>
                 <p>Macho. Vacunado y desparasitado.Tiene 2 meses. Es tierno.</p>
                 <h4>Tel: 35489999093</h4>
+                <div class="container">
+                    <div class="box">
+                        <a href="index.html">Atrás</a>
+                    </div>
+                </div>
             </section>
         </div>
     </main>
