--- a/pets.net/perro3.html
+++ b/pets.net/perro3.html
@@ -28,6 +28,11 @@
                 <h3>Sobre Pancho:</h3>
                 <p>Macho. Castrado, vacunado y desparasitado.Tiene 3 año. Es tranquilo y hogareño.</p>
                 <h4>Tel: 3458907777493</h4>
+                <div class="container">
+                    <div class="box">
+                        <a href="index.html">Atrás</a>
+                    </div>
+                </div>
             </section>
         </div>
     </main>
