--- a/pets.net/RefHuertaGrande.html
+++ b/pets.net/RefHuertaGrande.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -22,15 +22,9 @@
     </header>
     <main>
         <div>
-            <section class="recuadro" id="example4">
-                <h1>Refugios en Valle Hermoso</h1>
-                <h3>Rescataditos</h3>
-                 <p>Tel: +354 843 5949</p>
-                 <p>Horarios: de lunes a sábado 9 a 2:00p.m ; 4 a 10 p.m</p>
-                 <p> Dirección: 5168</p>
-                <h3>Alma Animal</h3>
-                 <p>Tel: 03548 46-4658</p>
-                 <p> Dirección: Gdor. Cárcano 381,    X5168 Valle Hermoso, Córdoba</p>
+            <section class="recuadro" id="example1">
+                <h1>Refugios en Huerta Grande</h1>
+                <h3>No hay refugios en Huerta Grande.</h3>
                 <div class="container">
                     <div class="box">
                         <a href="index.html">Atrás</a>
