--- a/pets.net/index.html
+++ b/pets.net/index.html
@@ -16,10 +16,7 @@
                 <img src="img/Logo.png" alt="" height="100" width="100">
             </a>
             <form id="rech" action="/recherche" name="searchform" class="navbar-form" role="search" method="GET">
-                <input placeholder="Buscar..." id="search-input story" class="searchbar-input" name="q" size="17" type="text" autocomplete="off" value="">
-                <div id="searchsuggestions" style="position: absolute; top: 0px; left: 0px; display: none;"></div>
-                <button type="submit" class="search-submit">
-                </button>
+                <input type="text" placeholder="Buscar..." id="searchInput">
             </form>
         <nav>
             <section class="menu" id="example1">
@@ -51,7 +48,7 @@
                     Las mascotas de la calle corren muchos peligros y merecen disfrutar de una vida
                     plena. Por eso nuestro proyecto elige darle una ayuda a estas mascotas que no
                     pueden disfrutar de las comodidades de un hogar.</p>
-                <p>Para ello, programamos y diseñamos una página web para brindarle ayuda a estos animales.</p>
+                <p>Para ello, programamos y diseñamos un sitio web para brindarle ayuda a estos animales.</p>
             </section>
         </div>
         
@@ -115,22 +112,22 @@
                 </div>          
             </section>
         </div>
-        <div id="Veterinarias en la zona">
+        <div class="vet-locations" id="Veterinarias en la zona">
             <section class="example" id="example3">
                 <h2>Veterinarias en la zona</h2>
                 <p>Seleccione la zona en la que busca veterinarias:</p>
                 <div class="container direction-column">
-                    <div class="box">
-                        <a href="VetVillaGiardino.html">Villa Giardino</a>
+                    <div class="box" >
+                        <a href="VetVillaGiardino.html" data-localidad="Villa Giardino">Villa Giardino</a>
                     </div>
                     <div class="box">
-                        <a href="VetHuertaGrande.html">Huerta Grande</a>
+                        <a href="VetHuertaGrande.html"data-localidad="Huerta Grande">Huerta Grande</a>
                     </div>
                     <div class="box">
-                        <a href="VetLaFalda.html">La Falda</a>
+                        <a href="VetLaFalda.html"data-localidad="La Falda">La Falda</a>
                     </div>
                     <div class="box">
-                        <a href="VetValleHermoso.html">Valle Hermoso</a>
+                        <a href="VetValleHermoso.html"data-localidad="Valle Hermoso">Valle Hermoso</a>
                     </div>
                 </div>
             </section>
@@ -161,6 +158,6 @@
             <img src="img/logo proa.png" alt="" height="100" width="100">
         </a>
     </footer>
-    <script>https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js</script>
+    <script src="JS/script.js"></script>
 </body>
 </html>
